--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
-version: 2
+version: 2.1
 
 jobs:
-  build:
+  lint:
     docker:
       - image: node:12
     steps:
       - checkout
       - restore_cache:
           key: v2-{{ checksum "yarn.lock" }}
-      - run: yarn install
+      - run: yarn install --frozen-lockfile
       - save_cache:
           key: v2-{{ checksum "yarn.lock" }}
           paths:
